--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-url: "http://localhost:4000" # the base hostname & protocol for your site
+url: "http://fromruins.github.io" # the base hostname & protocol for your site
 twitter: http://twitter.com/drewmistak
-instagram: http://instagram.com/dresmistak
+instagram: http://instagram.com/drewmistak
 
 # Build settings
 markdown: kramdown
