--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,21 @@
 
 # Site settings
 title: From Ruins
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-url: "http://fromruins.github.io" # the base hostname & protocol for your site
-twitter: http://twitter.com/drewmistak
-instagram: http://instagram.com/drewmistak
+email: drew@drewmistak.com
+description: Blog description
+url: "http://fromruins.github.io/" # the base hostname & protocol for your site
+
+permalink: "/:categories/:title"
+excerpt_separator: <!--break-->
 
 # Build settings
 markdown: kramdown
+kramdown:
+  input: GFM
+
+# Serving
+port: 4000
+host: 0.0.0.0
+
+gems:
+  - jekyll-sitemap
